1.5 fix gap

--- a/HomeWork-1/hw_1.5.css
+++ b/HomeWork-1/hw_1.5.css
@@ -6,7 +6,7 @@ ul {
 	list-style-type: none;
 	display: flex;
 	flex-wrap: wrap;
-	grid-gap: 40px;
+	gap: 40px;
 	
 	
 	li {
